--- a/learn-certs-pr/azure-data-engineer/renew/index.yml
+++ b/learn-certs-pr/azure-data-engineer/renew/index.yml
@@ -13,6 +13,9 @@ summary: |-
 skills:
 - Прием петабайтов с помощью фабрики данных Azure
 - Выполняйте масштабное преобразование без необходимости программировать с помощью фабрики данных Azure
+- Интегрировать данные с Azure Data Factory
+- Разрабатывать хранилище данных с использованием Azure Synapse Analytics
+- Импортировать данные в Azure Synapse Analytics с использованием PolyBase
 examsPassed:
 - dp-200, dp-201 ИЛИ dp-203
 studyGuideDescription: 'Используйте этот набор учебных модулей, которые помогут вам подготовиться к сертификации Microsoft: Экзамен на продление срока подписки Azure Data Engineer Associate.'
