--- a/learn-certs-pr/azure-iot-developer-specialty/index.yml
+++ b/learn-certs-pr/azure-iot-developer-specialty/index.yml
@@ -6,11 +6,15 @@ metadata:
 uid: certification.azure-iot-developer-specialty
 iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.svg
 summary: |-
-  Разработчик Azure IoT реализует настройку и выполняет задачи по кодированию, необходимые для создания и поддержки части cloud и пограничной части решения IoT. В дополнение к настройке и поддержке устройств с использованием служб cloud разработчик IoT также настраивает физические устройства. Разработчик IoT отвечает за ведение и устранение проблем конфигурации устройств на протяжении всего их жизненного цикла.
+  Кандидаты на эту сертификацию должны обладать знаниями по реализации конфигурации и задач кодирования, необходимых для создания и поддержки частей cloud и edge решения IoT.
   
-  Разработчик IoT реализует технические условия на проектирование для решений IoT, включая условия в отношении топологии устройств, подключений, безопасности, диагностики и мониторинга. Разработчик IoT разрабатывает модули и осуществляет их развертывание, а также настраивает сети устройств для части IoT Edge решения. Разработчик IoT занимается осуществлением разработки для решений для управления конвейерами данных, включая мониторинг и преобразование данных, имеющих отношение к IoT. Разработчик IoT работает с архитектором Azure IoT, инженерами данных и иными заинтересованными лицами с целью обеспечения успешной интеграции бизнеса.
+  Обязанности этой роли включают развертывание физических устройств, их настройку и поддержку с использованием служб cloud, а также поддержку конфигурации и устранение соответствующих неполадок в течение всего жизненного цикла устройств.
   
-  Разработчики IoT должны обладать общим пониманием типов устройств и служб Azure, включая варианты хранения данных, анализ данных, обработку данных, AI и другие параметры платформы как услуги. Разработчики IoT должны мочь программировать по крайней мере на одном из языков, поддерживаемых Azure IoT SDK.
+  Разработчики Azure IoT также отвечают за реализацию технических условий на проектирование для решений IoT, включая условия в отношении топологии устройств, подключений, безопасности, диагностики и мониторинга. Эти специалисты разрабатывают модули и осуществляют их развертывание, а также настраивают сети устройств для части Azure IoT Edge решения. В дополнение к этому такие разработчики занимаются реализацией проектирования для решений для управления конвейерами данных, включая мониторинг и преобразование данных, имеющих отношение к IoT.
+  
+  Разработчики Azure IoT работают с архитекторами, инженерами данных и другими заинтересованными лицами с целью обеспечения успешной интеграции бизнеса, включая реализацию службы Azure Digital Twins.
+  
+  Кандидаты на эту сертификацию должны обладать общим пониманием типов устройств и Azure services, включая варианты хранения данных, анализ данных, обработку данных, AI и другие параметры платформы как услуги (PaaS). Кандидаты на эту сертификацию должны мочь программировать по крайней мере на одном из языков, поддерживаемых пакетом средств разработки программного обеспечения (поддерживаемых SDK) Azure IoT.
 subTitle: Разработчики Azure IoT реализуют настройку и выполняют задачи по кодированию, необходимые для создания и поддержки части cloud и пограничной части решения IoT.
 levels:
 - intermediate
