--- a/learn-certs-pr/courses/ai-102t00.yml
+++ b/learn-certs-pr/courses/ai-102t00.yml
@@ -29,11 +29,6 @@ roles:
 - ai-engineer
 products:
 - azure
-- azure-cognitive-services
-- azure-bot-service
-- azure-machine-learning
-- azure-machine-learning-studio
-- azure-search
 exams:
 - uid: exam.ai-102
 summary: |-
@@ -166,9 +161,11 @@ outlineSection: |-
   - Анализ изображений
   - Анализ видео
 
-  #### Лабораторная работа &#58; анализ изображений с помощью компьютерного зрения
+  #### Лабораторная работа : анализ видео
 
-  #### Лабораторная работа &#58; анализ видео с помощью индексатора видео
+  ####
+
+  #### Лабораторная работа : анализ изображений с помощью компьютерного зрения
 
   После прохождения этого модуля учащиеся смогут&#58;
   - Использовать службу компьютерного зрения для анализа изображений
