--- a/learn-certs-pr/courses/az-700t00.yml
+++ b/learn-certs-pr/courses/az-700t00.yml
@@ -8,6 +8,12 @@ courseNumber: 'AZ-700T00'
 hoursToComplete: 72
 iconUrl: /media/learn/certification/course.svg
 learningPartnersLink: /learn/certifications/partners
+skillsGained:
+- skill: Проектировать, реализовывать гибридные сетевые подключения и управлять ими
+- skill: Проектировать и реализовывать основную сетевую инфраструктуру Azure
+- skill: Проектировать и реализовывать маршрутизацию и балансировку нагрузки в Azure
+- skill: Обеспечивать безопасность и осуществлять мониторинг сетей
+- skill: Проектировать и реализовывать закрытый доступ к Azure Services
 locales:
 - en
 levels:
@@ -16,6 +22,8 @@ roles:
 - network-engineer
 products:
 - azure
+exams:
+- uid: exam.az-700
 summary: |-
   Из этого курса сетевые инженеры узнают, как проектировать, реализовывать и поддерживать сетевые решения Azure. В этом курсе рассматривается процесс проектирования и реализации основной сетевой инфраструктуры Azure, гибридных сетевых подключений, балансировки трафика, сетевой маршрутизации, закрытого доступа к службам Azure, сетевой безопасности и мониторинга, а также управление ими. Узнайте, как проектировать и реализовывать безопасную и надежную сетевую инфраструктуру в Azure, как осуществлять гибридные подключения, маршрутизацию, закрытый доступ к службам Azure и как осуществлять мониторинг в Azure.
 
@@ -23,36 +31,33 @@ summary: |-
 
   Этот курс предназначен для сетевых инженеров, которые хотят специализироваться на сетевых решениях Azure. Сетевой инженер Azure проектирует и реализовывает основную сетевую инфраструктуру Azure, гибридные сетевые подключения, балансировку трафика, сетевую маршрутизацию, закрытый доступ к службам Azure, безопасность и мониторинг сети. Сетевой инженер Azure будет управлять сетевыми решениями для обеспечения оптимальной производительности, устойчивости, масштабирования и безопасности.
 prerequisitesSection: |-
-  ### Модуль 1: виртуальные сети Azure
+  ### Модуль 1: знакомство с Azure Virtual Networks
 
   В этом модуле вы узнаете, как проектировать и реализовывать основные сетевые ресурсы Azure, такие как виртуальные сети, общедоступные и частные IPs, DNS, пиринг между виртуальными сетями, маршрутизация и Azure Virtual NAT.
 
   #### Уроки
+  *   Изучение Azure Virtual Networks
 
-  *   Виртуальные сети Azure
+  *   Настройка служб общедоступных IP
 
-  *   Службы общедоступных IP
+  *   Проектирование разрешения имен для вашей виртуальной сети
 
-  *   Общедоступные и частные DNS
+  *   Обеспечение перекрестного подключения VNet с помощью пиринга
 
-  *   Перекрестное подключение VNet
+  *   Реализация маршрутизации трафика виртуальной сети
 
-  *   Маршрутизация виртуальных сетей
-
-  *   Виртуальная сеть Azure NAT
+  *   Настройка доступа к Интернету с помощью Azure Virtual NAT
 
 
-  #### Лабораторная работа : проектирование и реализация виртуальной сети Azure
-
-  ####
-
-  #### Лабораторная работа : настройка параметров DNS в Azure
+  #### Лабораторная работа : упражнение: проектирование и реализация виртуальной сети в Azure
 
   ####
 
-  #### Лабораторная работа : подключение виртуальных сетей с помощью пиринга
+  #### Лабораторная работа : упражнение: настройка параметров DNS в Azure
 
   ####
+
+  #### Лабораторная работа : упражнение: соединение двух Azure Virtual Networks с использованием пиринга глобальной виртуальной сети
 
   После прохождения этого модуля учащиеся смогут:
 
@@ -74,27 +79,32 @@ prerequisitesSection: |-
   В этом модуле вы узнаете, как проектировать и реализовывать решения гибридной сети, такие как VPN-подключения типа «сеть — сеть», VPN-подключения типа «точка — сеть», Azure Virtual WAN и виртуальные концентраторы WAN.
 
   #### Уроки
+  *   Проектирование и реализация Azure VPN Gateway
 
-  *   VPN-подключение типа «сеть — сеть»
+  *   Соединение сетей с помощью VPN-подключений типа «сеть — сеть»
 
-  *   VPN-подключение типа «точка — сеть»
+  *   Подключение устройств к сетям с помощью VPN-подключений типа «точка — сеть»
 
-  *   Виртуальная WAN Azure
+  *   Подключение удаленных ресурсов с использованием Azure Virtual WANs
+
+  *   Создание сетевого виртуального модуля (NVA) в виртуальном концентраторе
 
 
-  #### Лабораторная работа : создание и настройка локального шлюза
+  #### Лабораторная работа : упражнение: создание виртуальной WAN с использованием Azure Portal
 
   ####
-  *   Создание и настройка шлюза виртуальной сети
-  *   Создание виртуальной WAN с использованием портала Azure
 
-  Проектирование и реализация VPN-подключения типа «сеть — сеть»
+  #### Лабораторная работа : упражнение: создание и настройка шлюза виртуальной сети
 
-  *   Проектирование и реализация VPN-подключения типа «точка — сеть»
+  ####
 
-  *   Проектирование и реализация аутентификации
+  После прохождения этого модуля учащиеся смогут/будут:
 
-  *   Проектирование и реализация ресурсов виртуальной WAN Azure
+  *   Проектировать и реализовывать VPN-подключение типа «сеть — сеть»
+
+  *   Проектировать и реализовывать VPN-подключение типа «точка — сеть»
+
+  *   Проектировать и реализовывать ресурсы Azure Virtual WAN
 
   ### Модуль 3: проектирование и реализация Azure ExpressRoute
 
@@ -102,24 +112,36 @@ prerequisitesSection: |-
 
   #### Уроки
 
-  *   ExpressRoute
+  *   Изучение Azure ExpressRoute
 
-  *   ExpressRoute Direct
+  *   Проектирование развертывания ExpressRoute
 
-  *   ExpressRoute FastPath
+  *   Настройка пиринга для развертывания ExpressRoute
 
-  *   ExpressRoute Peering
+  *   Подключение канала ExpressRoute к VNet
+
+  *   Соединение географически разнесенных сетей с помощью глобального охвата ExpressRoute
+
+  *   Повышение производительности пути к данным между сетями с помощью ExpressRoute FastPath
+
+  *   Устранение проблем подключения ExpressRoute
 
 
-  #### Лабораторная работа : создание и настройка ExpressRoute
+  #### Лабораторная работа : упражнение: настройка шлюза ExpressRoute
 
   ####
 
-  Проектирование и реализация Expressroute
+  #### Лабораторная работа : упражнение: подготовка канала ExpressRoute
 
-  *   Проектирование и реализация Expressroute Direct
+  ####
 
-  *   Проектирование и реализация Expressroute FastPath
+  После прохождения этого модуля учащиеся смогут/будут:
+
+  *   Проектировать и реализовывать Expressroute
+
+  *   Проектировать и реализовывать Expressroute Direct
+
+  *   Проектировать и реализовывать Expressroute FastPath
 
 
   ### Модуль 4: балансировка нагрузки трафика, передаваемого не по протоколу HTTP(S), в Azure
@@ -128,60 +150,54 @@ prerequisitesSection: |-
 
   #### Уроки
 
-  *   Доставка содержимого и балансировка нагрузки
+  *   Изучение балансировки нагрузки
 
-  *   Azure Load balancer
+  *   Проектирование и реализация Azure load balancer с использованием Azure portal
 
-  *   Azure Traffic Manager
-
-  *   Монитор Azure
-
-  *   Наблюдатель за сетями
+  *   Изучение Azure Traffic Manager
 
 
-  #### Лабораторная работа : создание и настройка общедоступного балансировщика нагрузки для балансировки нагрузки VMs с использованием портала Azure
+  #### Лабораторная работа : упражнение: создание профиля Traffic Manager с использованием Azure portal
 
   ####
 
-  #### Лабораторная работа : создание профиля Traffic Manager с использованием портала Azure
+  #### Лабораторная работа : упражнение: создание и настройка Azure load balancer
 
   ####
 
-  #### Лабораторная работа : создание и просмотр оповещений метрики в мониторе Azure, а также управление ими
+  После прохождения этого модуля учащиеся смогут/будут:
 
-  ####
- 
-  Проектирование и реализация Azure Laod Balancers
+  *   Проектировать и реализовывать Azure Load Balancers
 
-  *   Проектирование и реализация Azure Traffic Manager
-
-  *   Мониторинг сетей с помощью монитора Azure
-
-  *   Использование наблюдателя за сетями
+  *   Проектировать и реализовывать Azure Traffic Manager
 
 
-  ### Модуль 5: балансировка нагрузки HTTP(S)-трафика в Azure
+  ### Модуль 5: Load balancing HTTP(S)-трафика в Azure
 
   В этом модуле вы узнаете, как проектировать и реализовывать решения для балансировки нагрузки HTTP(S)-трафика в Azure с помощью Azure Application gateway и Azure Front Door.
 
   #### Уроки
 
-  *   Azure Application Gateway
+  *   Проектирование Azure application gateway
 
-  *   Azure Front Door
+  *   Настройка Azure application gateway
+
+  *   Проектирование и настройка Azure front door
 
 
-  #### Лабораторная работа : создание точки входа для веб-приложения высокой надежности с использованием портала Azure
-
-  ####
-
-  #### Лабораторная работа : создание и настройка Application Gateway
+  #### Лабораторная работа : упражнение: развертывание Azure application gateway
 
   ####
 
-  Проектирование и реализация Azure Application Gateway
+  #### Лабораторная работа : упражнение: создание точки входа для веб-приложения высокой надежности
 
-  *   Реализация Azure Front Door
+  ####
+
+  После прохождения этого модуля учащиеся смогут/будут:
+
+  *   Проектировать и реализовывать Azure Application Gateway
+
+  *   Реализовывать Azure Front Door
 
   ### Модуль 6: проектирование и реализация безопасности сети
 
@@ -189,34 +205,40 @@ prerequisitesSection: |-
 
   #### Уроки
 
-  *   Azure DDoS Protection
+  *   Обеспечение безопасности ваших виртуальных сетей в Azure portal
 
-  *   Azure Firewall
+  *   Развертывание Azure DDoS Protection с использованием Azure portal
 
-  *   Группы безопасности сети
+  *   Развертывание Network Security Groups с использованием Azure portal
 
-  *   Брандмауэр веб-приложения на Azure Front Door
+  *   Проектирование и реализация Azure Firewall
+
+  *   Работа с Azure Firewall Manager
+
+  *   Реализация Web Application Firewall на Azure Front Door
 
 
-  #### Лабораторная работа : создание виртуальной сети с помощью плана защиты DDoS
-
-  ####
-
-  #### Лабораторная работа : развертывание и настройка Azure Firewall
-
-  ####
-
-  #### Лабораторная работа : создание политики брандмауэра веб-приложения на Azure Front Door
+  #### Лабораторная работа : упражнение: развертывание и настройка Azure Firewall с использованием Azure portal
 
   ####
 
-  Настройка и мониторинг плана защиты Azure DDoS
+  #### Лабораторная работа : упражнение: обеспечение безопасности вашего виртуального концентратора с использованием Azure Firewall Manager
 
-  *   Реализация Azure Firewall и управление им
+  ####
 
-  *   Реализация групп безопасности сети
+  #### Лабораторная работа : упражнение: настройка DDoS Protection для виртуальной сети с использованием Azure portal
 
-  *   Реализация брандмауэра веб-приложения (WAF) на Azure Front Door
+  ####
+
+  После прохождения этого модуля учащиеся смогут/будут:
+
+  *   Осуществлять настройку и мониторинг плана Azure DDoS protection
+
+  *   Реализовывать Azure Firewall и управлять им
+
+  *   Реализовывать группы безопасности сети
+
+  *   Реализовывать брандмауэр веб-приложения (WAF) на Azure Front Door
 
 
   ### Модуль 7: проектирование и реализация закрытого доступа к Azure Services
@@ -225,33 +247,63 @@ prerequisitesSection: |-
 
   #### Уроки
 
-  *   Определение Azure Private Link и частных конечных точек
-
-  *   Проектирование и настройка частных конечных точек
-
-  *   Интеграция Private Link с DNS и локальными клиентами
-
-  *   Создание, настройка и предоставление доступа к конечным точкам службы
-
-  *   Настройка интеграции VNET для службы приложений
-
-
-  #### Лабораторная работа : ограничение сетевого доступа к ресурсам PaaS с помощью конечных точек службы для виртуальной сети
-
-  ####
-
-  #### Лабораторная работа : создание частной конечной точки Azure
-
-  ####
-
-  Определение разницы между Private Link Service и частными конечными точками
-
-  *   Проектирование и настройка частных конечных точек
+  *   Определение Private Link Service и частных конечных точек
 
   *   Объяснение конечных точек службы для виртуальной сети
 
-  *   Проектирование и настройка доступа к конечным точкам службы
-
   *   Интеграция Private Link с DNS
 
-  *   Интеграция службы приложений с виртуальными сетями Azure
+  *   Интеграция вашей App Service с Azure virtual networks
+
+
+  #### Лабораторная работа : упражнение: создание частной конечной точки Azure с использованием Azure PowerShell
+
+  ####
+
+  #### Лабораторная работа : упражнение: ограничение сетевого доступа к ресурсам PaaS с помощью конечных точек службы для виртуальной сети
+
+  ####
+
+  После прохождения этого модуля учащиеся смогут/будут:
+
+  *   Определять разницу между Private Link Service и частными конечными точками
+
+  *   Проектировать и настраивать частные конечные точки
+
+  *   Объяснять конечные точки службы для виртуальной сети
+
+  *   Проектировать и настраивать доступ к конечным точкам службы
+
+  *   Интегрировать Private Link с DNS
+
+  *   Интегрировать вашу App Service с Azure virtual networks
+
+
+  ### Модуль 8: проектирование и реализация мониторинга сети
+
+  В этом модуле вы узнаете, как проектировать и реализовывать решения для мониторинга сети, такие как Azure Monitor и Network watcher.
+
+  #### Уроки
+
+  *   Мониторинг сетей с помощью Azure Monitor
+
+  *   Мониторинг сетей с помощью Azure Network Watcher
+
+
+  #### Лабораторная работа : упражнение: мониторинг ресурса балансировки нагрузки с использованием Azure Monitor
+
+  ####
+
+  После прохождения этого модуля учащиеся смогут/будут:
+
+  *   Настраивать оповещения о работоспособности сети и ведение журналов с использованием Azure Monitor
+
+  *   Создавать и настраивать экземпляры Connection Monitor
+
+  *   Настраивать и использовать Traffic Analytics
+
+  *   Настраивать журналы потоков NSG
+
+  *   Включать и настраивать журнал ведения диагностики
+
+  *   Настраивать Azure Network Watcher
