--- a/learn-certs-pr/courses/ms-700t00.yml
+++ b/learn-certs-pr/courses/ms-700t00.yml
@@ -12,7 +12,7 @@ skillsGained:
 - skill: Как реализовать управление, безопасность и совместимость для Команд Microsoft Teams
 - skill: Как подготовить среду организации для развертывания Microsoft Teams
 - skill: Как развернуть команды и управлять ими
-- skill: Способы управления сотрудничеством в Microsoft Teams
+- skill: Как управлять сотрудничеством и коммуникацией в Microsoft Teams
 - skill: Методы управления и устранения неполадок связи в Microsoft Teams
 learningPartnersLink: /learn/certifications/partners
 locales:
@@ -23,104 +23,129 @@ roles:
 - administrator
 products:
 - m365
-- azure-active-directory
-- office-365
 exams:
 - uid: exam.ms-700
 summary: |-
-  Курс Управление Microsoft Teams предназначен для лиц, которые претендуют на роль администратора Microsoft 365 Teams.
-  админы Microsoft Teams настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
-  Этот курс охватывает шесть основных элементов - обзор командного приложения Microsoft Teams, внедрение управления, безопасности и соответствия для Microsoft Teams, подготовка среды для развертывания Microsoft Teams, развертывание и управление группами, управление совместной работой и управление коммуникациями в Microsoft Teams.
-  В обзоре Microsoft Teams вы получите обзор Microsoft Teams, включая архитектуру команд и связанные с ними рабочие нагрузки Office 365. Вам будет предоставлен обзор безопасности и соответствия в Microsoft Teams и, наконец, вы получите представление о том, как управлять Microsoft Teams.
-  Внедряя управление, безопасность и соответствие требованиям для Microsoft Teams, вы будете планировать и настраивать управление для групп Office 365, включая политики истечения срока и именования. Затем вы внедрите безопасность, настроив условный доступ, MFA или управление угрозами для Команд Microsoft. Наконец, вы реализуете соответствие для Команд с помощью политик DLP, случаев обнаружения электронных данных eDiscovery или политик надзора.
-  При подготовке среды для развертывания Microsoft Teams вы планируете обновление со Skype для бизнеса до Microsoft Teams путем оценки путей обновления с режимами обновления, управления миграцией собраний и настройки параметров сосуществования и обновления. Затем вы запланируете и настроите параметры сети для команд Microsoft и, наконец, развернете конечные точки Microsoft Teams и будете управляете ими.
-  Развертывая команды и управляя ими, вы узнаете, как создавать команды и управлять ими, управлять членством и доступом как для внутренних, так и для внешних пользователей.
-  Управляя совместной работой в Microsoft Teams, вы будете управлять чатами и совместной работой, настройками Команды или политикой создания частных каналов. Наконец, вы будете управлять настройками приложений для команд, такими как политики установки приложений, приложения, боты и коннекторы в командах Microsoft или публиковать пользовательские приложения в командах Microsoft.
-  Этот курс заканчивается управлением коммуникациями в Microsoft Teams. Вы узнаете, как управлять событиямии встречами в режиме реального времени управлять телефонными номерами или телефонной системой для команд Microsoft, и наконец, решать проблемы с аудио и видео, а также клиентские проблемы.
+  В этом курсе вы узнаете о различных средствах управления Teams, функции обеспечения безопасности и соответствия требованиям для Teams, требовании к сети для развертывания Teams, а также о настройках и политиках Teams для управления совместной работой и коммуникацией в Teams. Вы узнаете об архитектуре Teams. В частности, вы узнаете об интеграции между Microsoft Teams и различными рабочими нагрузками и службами в Microsoft 365. Вы узнаете о функциях безопасности и соответствия требованиям для Teams, включая условный доступ, MFA, угрозы, оповещения, политики DLP, eDiscovery и политики информационных барьеров. Вы также познакомитесь с подготовкой среды для развертывания Microsoft Teams, включая переход со Skype for Business на Microsoft Teams, настройки сети и управление конечными точками Microsoft Teams. В завершение вы узнаете, как создавать команды и управлять ими и как управлять членством, включая внутренних и внешних пользователей. Вы также узнаете о различных настройках и политиках для управления совместной работой и коммуникацией в Microsoft Teams.
 
   #### Профиль аудитории
-  Студенты этого курса должны быть заинтересованы в Microsoft Teams или в сдаче сертификационного экзамена Microsoft Teams Administrator Associate.
+
+  Учащиеся этого курса заинтересованы в Microsoft Teams или сдаче сертификационного экзамена Microsoft Teams Administrator Associate. Администратор Microsoft Teams осуществляет планирование и управление, развертывает и настраивает Microsoft Teams с целью обеспечения эффективного и действенного сотрудничества и коммуникации в среде Microsoft 365. Администратор Microsoft Teams должен мочь осуществлять планирование и развертывание команд, чатов, приложений, каналов, собраний, аудио- и видеоконференций, трансляций, звонков и устройств, сертифицированных для Teams, а также управление ими. У администратора Microsoft Teams есть опыт интеграции Microsoft Teams с SharePoint, OneDrive, Exchange, Microsoft 365 Groups и другими приложениями Microsoft, сторонними и пользовательскими приложениями. Администратор Microsoft Teams понимает и умеет работать с другими рабочими нагрузками и ролями, например, относящимся к сетям, голосовым звонкам, удостоверениям, доступу, устройствам, лицензированию, безопасности, соответствию требованиям, управлению информацией и адаптации пользователей.
 prerequisitesSection: |-
   - Хорошее знание базовый опыт работы со службами Microsoft 365.
   - Иметь хорошее понимание общих ИТ-практик, включая использование PowerShell.
 outlineSection: |-
-  ### Модуль 1&#58; Microsoft Teams Overview
-  В обзоре Microsoft Teams вы получите обзор Microsoft Teams, включая архитектуру команд и связанные с ними рабочие нагрузки Office 365. Вам будет предоставлен обзор безопасности и соответствия в Microsoft Teams и, наконец, вы получите представление о том, как управлять Microsoft Teams.
+  ### Модуль 1: начало работы с управлением Microsoft Teams
+
+  В этом модуле дается обзор Microsoft Teams, включая архитектуру Teams и соответствующие рабочие нагрузки Microsoft 365. Вы также познакомитесь со средствами управления для Teams и узнаете, как управлять жизненным циклом Teams.
+
   #### Уроки
-  - Обзор Команд Microsoft Teams
-  - Обзор требований безопасности и соответствия в Microsoft Teams
-  - Обзор управления командами Microsoft
+
+  *   Изучение Microsoft Teams
+
+  *   Развертывание и управление Microsoft Teams
+
+  *   Реализация управления жизненным циклом для Microsoft Teams
 
 
-  #### Лабораторная работа &#58; Управляйте ролями и создавайте команды
-  - Подготовьте командные роли и лицензии
-  - Создайте новую команду
+  #### Лабораторная работа : управление Microsoft Teams
 
+  ####
+  *   Подготовка ролей и лицензий команд
+  *   Изучение средств управления Teams
+  *   Создание групп и команд
+  *   Реализация управления жизненным циклом для Microsoft Teams
 
-  ### Модуль 2&#58; Внедрение в Управление, безопасность и соответствие Microsoft Teams
-  Внедряя управление, безопасность и соответствие требованиям для Microsoft Teams, вы будете планировать и настраивать управление для групп Office 365, включая политики истечения срока и именования. Затем вы внедрите безопасность, настроив условный доступ, MFA или управление угрозами для Команд Microsoft. Наконец, вы реализуете соответствие для Команд с помощью политик DLP, случаев обнаружения электронных данных eDiscovery или политик надзора.
+  ### Модуль 2: реализация обеспечения безопасности и соответствия требованиям для Microsoft Teams
+
+  В этом модуле вы узнаете, как управлять доступом для внешних пользователей из другого центра администрирования в Microsoft 365, как использовать функции безопасности и соответствия требованиям для защиты среды Teams, включая условный доступ, MFA, управление угрозами для Microsoft Teams, политики DLP, дела eDiscovery и соответствие коммуникации требованиям.
+
   #### Уроки
-  - Внедрение регуляции и управления жизненным циклом для Microsoft Teams
-  - Внедрение безопасности для Microsoft Teams
-  - Внедрение соответствия для Команд Microsoft Teams
+
+  *   Управление доступом для внешних пользователей
+
+  *   Реализация безопасности для Microsoft Teams
+
+  *   Реализация соответствия требованиям для Microsoft Teams
 
 
-  #### Лабораторная работа &#58; Настройка безопасности и соответствия требованиям для Команд и контента
-  - Внедрение регуляции и управления жизненным циклом для Microsoft Teams
-  - Внедрение безопасности для Microsoft Teams
-  - Внедрение соответствия для Команд Microsoft Teams
+  #### Лабораторная работа : настройка безопасности и соответствия требованиям для Microsoft Teams
 
+  ####
+  *   Управление гостевым доступом для Microsoft Teams
+  *   Реализация безопасности для Microsoft Teams
+  *   Реализация соответствия требованиям для Microsoft Teams
 
-  ### Модуль 3&#58; Подготовьте среду для развертывания Microsoft Teams
-  При подготовке среды для развертывания Microsoft Teams вы планируете обновление со Skype для бизнеса до Microsoft Teams путем оценки путей обновления с режимами обновления, управления миграцией собраний и настройки параметров сосуществования и обновления. Затем вы запланируете и настроите параметры сети для команд Microsoft и, наконец, развернете конечные точки Microsoft Teams и будете управляете ими.
+  ### Модуль 3: подготовка среды для развертывания Microsoft Teams
+
+  В этом модуле вы познакомитесь с различными вариантами обновления для сосуществования и режимами обновления для перехода со Skype for Business на Microsoft Teams. Вы также научитесь осуществлять планирование и настройку параметров сети для Microsoft Teams.
+
   #### Уроки
-  - Обновление со Skype for Business до Microsoft Teams
-  - Планирование и настройка параметров сети для команд Microsoft.
-  - Развертывание и управление конечными точками Команд Microsoft
+
+  *   Переход со Skype for Business на Microsoft Teams
+
+  *   Осуществление планирования и настройки параметров сети для Microsoft Teams
 
 
-  #### Лабораторная работа &#58; Подготовка среды для команд
-  - Рассчитать сетевые возможности
-  - Оценить профили конфигурации
-  - Обеспечить командные ресурсы
+  #### Лабораторная работа : осуществление планирования и настройки параметров сети для Microsoft Teams
+
+  ####
+  *   Расчет возможностей сети
 
 
-  ### Модуль 4&#58; Развертывание Команд и управление ими
-  Развертывая команды и управляя ими, вы узнаете, как создавать команды и управлять ими, управлять членством и доступом как для внутренних, так и для внешних пользователей.
+  ### Модуль 4: управление чатами, командами, каналами и приложениями в Microsoft Teams
+
+  В этом модуле вы познакомитесь с различными подходами к созданию команд и членства и управлению ими, узнаете, как управлять сотрудничеством в чатах и каналах и как управлять приложениями для Microsoft Teams.
+
   #### Уроки
-  - Создавайте команды и управляйте ими
-  - Управление членством
-  - Управление доступом для внешних пользователей
+
+  *   Создание команд и управление ими
+
+  *   Управление сотрудничеством в чатах и каналах
+
+  *   Управление приложениями для Microsoft Teams
 
 
-  #### Лабораторная работа &#58; Управление командами
-  - Управление командными ресурсами
-  - Управление обменом и доступом
+  #### Лабораторная работа : управление командами и настройками совместной работы для Teams
 
+  ####
+  *   Управление ресурсами команд
+  *   Настройка политик каналов и сообщений
+  *   Управление настройками приложений
+  *   Тестирование настроенных параметров политик
 
-  ### Модуль 5&#58; Управление совместной работой в Microsoft Teams
-  Управляя совместной работой в Microsoft Teams, вы будете управлять чатами и совместной работой, настройками Команды или политикой создания частных каналов. Наконец, вы будете управлять настройками приложений для команд, такими как политики установки приложений, приложения, боты и коннекторы в командах Microsoft или публиковать пользовательские приложения в командах Microsoft.
+  ### Модуль 5: управление собраниями и виртуальными событиями в Microsoft Teams
+
+  В этом модуле вы узнаете, как управлять собраниями и виртуальными событиями с помощью различных политик и настроек. Вы также научитесь развертывать устройства Teams, включая Teams Room.
+
   #### Уроки
-  - Управление чатом и опытом совместной работы
-  - Управление настройками для приложений Команд
+
+  *   Управление собраниями и виртуальными событиями
+
+  *   Настройка устройств Microsoft Teams и управление ими
 
 
-  #### Лабораторная работа &#58; Изменение параметров совместной работы для команд
-  - Настройка канала и политики сообщений
-  - Управление настройками приложения для команды
+  #### Лабораторная работа : управление собраниями Teams
 
+  ####
+  *   Управление собраниями и виртуальными событиями
+  *   Развертывание профилей устройств Teams
 
-  ### Модуль 6&#58; Управление общением в Microsoft Teams
-  Этот курс заканчивается управлением коммуникациями в Microsoft Teams. Вы узнаете, как управлять событиямии встречами в режиме реального времени управлять телефонными номерами или телефонной системой для команд Microsoft, и наконец, решать проблемы с аудио и видео, а также клиентские проблемы.
+  ### Модуль 6: управление звонками в Microsoft Teams
+
+  В этом модуле вы узнаете, как управлять номерами телефонов и телефонной системой для осуществления звонков в Microsoft Teams и как устранять проблемы со звуком, видео и клиентами.
+
   #### Уроки
-  - Управление живыми событиями и встречами
-  - Управление телефонными номерами
-  - Управление телефонной системой для Microsoft Teams
-  - Устранение неполадок аудио, видео и проблем клиентов
+
+  *   Управление номерами телефонов
+
+  *   Управление телефонной системой для Microsoft Teams
+
+  *   Устранение проблем со звуком, видео и клиентами
 
 
-  #### Лабораторная работа &#58; Изменение настроек связи для команд
-  - Настройка политик встреч
-  - Управление телефонной системой для Microsoft Teams
-  - Устранение неполадок аудио, видео и проблем с клиентом
+  #### Лабораторная работа : управление звонками в Microsoft Teams
 
+  ####
+  *   Настройка плана звонков (необязательно)
+  *   Управление телефонной системой для Microsoft Teams
