--- a/learn-certs-pr/d365-functional-consultant-financials/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials/index.yml
@@ -7,6 +7,8 @@ uid: certification.d365-functional-consultant-financials
 certificationRenewalUid: renewal.d365-functional-consultant-financials
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
+  <div><font color='red'><strong>На этой странице со сведениями о сертификации представлена информация о навыках, оцениваемых во время экзаменов, связанных с этой сертификацией. Здесь не представлены предстоящие или недавние изменения в отношении таких навыков. Для получения информации о предстоящих или недавних изменениях, перейдите на страницу(-ы) со сведениями о соответствующем(-их) экзамене(-ах).</strong></font><br/><br/></div>
+  
   Используйте эту сертификацию для подтверждения своих навыков и карьерного роста, если у вас есть опыт работы в качестве консультанта по функциональным возможностям, который анализирует бизнес-требования и реализует их в успешных бизнес-процессах и решениях на основе лучших в области практик. У вас должен быть опыт реализации и настройки Dynamics 365 Finance для выполнения бизнес-требований.
   
   Эта сертификация отлично подходит сотрудникам финансовых отделов, которые работают с дебиторской и кредиторской задолженностью, главной книгой, основными средствами, бюджетированием, расходами, учетом затрат и управлением затратами. Вы должны обладать фундаментальным пониманием принципов бухгалтерского учета и финансовых операций.
