--- a/learn-certs-pr/d365-functional-consultant-marketing/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-marketing/renew/index.yml
@@ -12,6 +12,7 @@ summary: |-
   Если у вас есть этот сертификат и срок его действия истекает в течение шести месяцев, у вас есть право продлить его. Подтвердите, что вы следите за последними обновлениями Dynamics 365 Marketing and Customer Voice, пройдя экзамен на продление сертификата. Вы также можете подготовиться к продлению сертификата с помощью тщательно подобранной коллекции учебных модулей.
 skills:
 - Управляйте клиентами в Dynamics 365 Marketing
+- Создавать вебинары в Dynamics 365 Marketing
 - Создавайте проект опроса с помощью Dynamics 365 Customer Voice
 - Создавайте опросы с помощью Dynamics 365 Customer Voice
 - Автоматизируйте опросы клиентов Dynamics 365 с помощью Power Automate
