--- a/learn-certs-pr/d365-functional-consultant-sales/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-sales/renew/index.yml
@@ -11,6 +11,8 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.s
 summary: |-
   Если у вас есть этот сертификат и срок его действия истекает в течение шести месяцев, вы имеете право продлить его. Покажите, что вы в курсе последних обновлений Dynamics 365 Customer Insights и Sales Insights, пройдя экзамен на продление сертификата. Вы также можете подготовиться к экзамену для обновления сертификата с помощью тщательно подобранной коллекции учебных модулей.
 skills:
+- Обрабатывать заказы на продажу с помощью Dynamics 365 Sales
+- Управлять каталогом продуктов и структурировать его с помощью Dynamics 365 Sales
 - Создание единого профиля клиента в Dynamics 365 Customer Insights
 - Работа с Dynamics 365 Customer Insights
 - Настройка Sales Insights
