--- a/learn-certs-pr/d365-functional-consultant-supply-chain-management/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-supply-chain-management/index.yml
@@ -7,29 +7,20 @@ uid: certification.d365-functional-consultant-supply-chain-management
 certificationRenewalUid: renewal.d365-functional-consultant-supply-chain-management
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Если вы консультант по функциональным возможностям или бизнес-пользователь с фундаментальным пониманием отраслевых стандартов управления логистическими цепочками, эта сертификация может стать для вас хорошим решением. У вас должен быть опыт настройки и реализации Dynamics 365 Supply Chain Management для удовлетворения потребностей вашей организации. Консультанты по функциональным возможностям управления логистическими цепочками являются ключевыми лицами, которые работают с разработчиками, архитекторами решений, руководителями проектов и консультантами по функциональным возможностям в области финансов, коммерции и производства.
+  Кандидаты на этот экзамен анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты выступают в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
   
-  Если перед попыткой прохождения этой сертификации вам нужно получить больше опыта, вот несколько рекомендаций&#58;
-
-  - Изучите модули по управлению логистическими цепочками в Microsoft Learn и получите больше практического опыта.
-  - Зарегистрируйтесь на обучающий курс с инструктором, включающим MB-300 или MB-330.
-  - Примите участие в жизни сообщества на [community.dynamics.com](https://community.dynamics.com/) или присоединитесь к группе пользователей.
-  - Понаблюдайте за работой консультанта по функциональным возможностям управления логистическими цепочками и помогите реализовать возможности Dynamics 365 Supply Chain Management.
-  - Найдите наставника, посетите склады и узнайте, как всё работает.
-  - Задайте вопросы и получите полезные ответы от экспертов и клиентов.
+  Кандидаты на этот экзамен обладают фундаментальным пониманием учетных политик и финансовых операций бизнесов, понятий обслуживания клиентов, выездного обслуживания, производства, розничной торговли и управления логистическими цепочками. Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций приложений для финансов и операций, включая финансы, производство и управление логистическими цепочками.
+  
+  У кандидатов должны быть некоторые знания в отношении практик управления логистическими цепочками, включая закупку, торговлю, логистику, управление складом и управление транспортировкой.
 subTitle: 'Dynamics 365 Supply Chain Management Functional Consultants по управлению цепочками поставок оптимизирует учет затрат, управление запасами, генеральное планирование и управление складами для своих клиентов.'
 levels:
 - intermediate
 skills:
-- Использование общих инструментов функциональности и внедрения
-- Настройка безопасности, процессов и параметров
-- Управлять данными приложений Finance and Operations
-- Валидация и поддержка решений
 - Внедрение управления информацией о продукте
-- Внедрение управления запасами
+- Реализовывать управление запасами 
 - Реализовывать процессы логистических цепочек и управлять ими
 - Реализовывать управление складом и управление транспортировкой
-- Реализовывать сводное планирование
+- Реализовывать оптимизацию планирования
 roles:
 - functional-consultant
 type: role-based
