--- a/learn-certs-pr/exams/az-220.yml
+++ b/learn-certs-pr/exams/az-220.yml
@@ -6,13 +6,11 @@ metadata:
 uid: exam.az-220
 displayName: AZ-220
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
-  Разработчик Azure IoT реализует настройку и выполняет задачи по кодированию, необходимые для создания и поддержки части cloud и пограничной части решения IoT. В дополнение к настройке и поддержке устройств с использованием служб cloud разработчик IoT также настраивает физические устройства. Разработчик IoT отвечает за ведение и устранение проблем конфигурации устройств на протяжении всего их жизненного цикла.
+  Кандидаты на этот экзамен должны обладать знаниями по реализации конфигурации и задач кодирования, необходимых для создания и поддержки частей cloud и edge решения IoT.
   
-  Разработчик IoT реализует технические условия на проектирование для решений IoT, включая условия в отношении топологии устройств, подключений, безопасности, диагностики и мониторинга. Разработчик IoT разрабатывает модули и осуществляет их развертывание, а также настраивает сети устройств для части IoT Edge решения. IoT Developer занимается осуществлением разработки для решений для управления конвейерами данных, включая мониторинг и преобразование данных, имеющих отношение к IoT. Разработчик IoT работает с архитектором Azure IoT, инженерами данных и иными заинтересованными лицами с целью обеспечения успешной интеграции бизнеса.
-  
-  Разработчики IoT должны обладать общим пониманием типов устройств и служб Azure, включая варианты хранения данных, анализ данных, обработку данных, AI и другие параметры платформы как услуги. Разработчики IoT должны мочь программировать по крайней мере на одном из языков, поддерживаемых Azure IoT SDK.
+  Кандидаты на этот экзамен должны обладать общим пониманием типов устройств и Azure services, включая варианты хранения данных, анализ данных, обработку данных, AI и другие параметры платформы как услуги (PaaS). Кандидаты на этот экзамен должны мочь программировать по крайней мере на одном из языков, поддерживаемых пакетом средств разработки программного обеспечения (поддерживаемых SDK) Azure IoT.
 subTitle: 'Этот экзамен измеряет вашу способность настраивать инфраструктуру решения IoT; подготавливать к работе устройства и управлять ими; реализовывать IoT Edge; обрабатывать данные и управлять ими; осуществлять мониторинг решений IoT, устранять в них неполадки и оптимизировать их; реализовывать безопасность.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4nBeC
@@ -26,7 +24,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 25 мая 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Настройка инфраструктуры решения IoT (10-15%)
 - Подготовка к работе устройств и управление ими (15-20%)
 - Реализация IoT Edge (15-20%)
