--- a/learn-certs-pr/exams/az-600.yml
+++ b/learn-certs-pr/exams/az-600.yml
@@ -22,7 +22,7 @@ locales:
 - zh-cn
 - ko
 levels:
-- advanced
+- intermediate
 skills:
 - Предоставление служб (30-35%)
 - Реализация интеграции центра обработки данных (15-20%)
