--- a/learn-certs-pr/exams/mb-310.yml
+++ b/learn-certs-pr/exams/mb-310.yml
@@ -6,9 +6,7 @@ metadata:
 uid: exam.mb-310
 displayName: MB-310
 summary: |-
-  <div>
-  <div><strong>Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
-  </div>
+  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 27 августа 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
 
   Кандидаты на этот экзамен являются консультантами по функциональным возможностям, которые анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты служат в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
 
@@ -22,7 +20,7 @@ locales:
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена было обновлено 16 октября 2020 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 27 августа 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
 - Настройка управления финансами (50-55%)
 - Реализация кредиторской задолженности и расходов и управление ими (10-15%)
 - Реализация дебиторской задолженности, кредита, сборов и признания дохода (20-25%)
