--- a/learn-certs-pr/exams/ms-700.yml
+++ b/learn-certs-pr/exams/ms-700.yml
@@ -6,14 +6,14 @@ metadata:
 uid: exam.ms-700
 displayName: MS-700
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
-  Microsoft Teams Administrator [Администратор Microsoft Teams] настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
+  Кандидаты на этот экзамен являются администраторами Microsoft Teams, которые осуществляют управление Microsoft Teams с целью упрощения эффективного и действенного сотрудничества и коммуникации в среде Microsoft 365.
   
-  Teams Administrator [Администратор Teams] должен быть способным планировать, развертывать и управлять командами в чате, приложениях, каналах, на собраниях, аудиоконференциях, интерактивных мероприятиях и вызовах. Администратор Teams также отвечает за обновление Skype for Business для команд. Кандидаты на этот экзамен должны быть экспертами в управлении параметрами Teams с использованием PowerShell. Teams Administrator обладает фундаментальным пониманием точек интеграции с приложениями и службами, включающими, среди прочего, SharePoint, OneDrive, Exchange, Azure AD и группы Office 365. Teams Administrator понимает, как интегрировать внешние приложения и службы.
+  Кандидаты на этот экзамен должны мочь осуществлять планирование, развертывание, настройку и обеспечение безопасности чатов, приложений, каналов, собраний, аудио- и видеоконференций, трансляций, звонков Teams и устройств, сертифицированных для Microsoft Teams. У кандидатов должен быть опыт интеграции Microsoft Teams с другими рабочими нагрузками, включая SharePoint, OneDrive, Exchange, Microsoft 365 Groups, Power Platform и другие приложения Microsoft, сторонние и пользовательские приложения.
   
-  Teams Administrator [Администратор Teams] сотрудничает с инженерами телефонии, чтобы интегрировать расширенные функции голосовой связи в Microsoft Teams. Эта роль не отвечает за настройку прямой маршрутизации, настройку маршрутизации вызовов или интеграцию телефонии. Teams Administrator [Администратор Teams] может работать с другими ролями администратора рабочей нагрузки, включая безопасность и соответствие требованиям, обмен сообщениями, работу в сети, идентификацию и устройства.
-subTitle: 'Этот экзамен позволяет оценить вашу способность выполнять следующие технические задачи: планирование и настройка среды Microsoft Teams; управление чатом, звонками и встречами; и управление политиками Teams и приложений.'
+  Администратор Microsoft Teams также сотрудничает со специалистами, выполняющими другие функциональные обязанности, например, в области сетей, телефонии, лицензирования, безопасности, обеспечения соответствия, адаптации пользователей, разработки приложений и поддержки.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: осуществлять планирование и настройку среды Microsoft Teams; управлять чатами, командами, каналами и приложениями; управлять звонками и собраниями; осуществлять мониторинг среды Microsoft Teams и устранять соответствующие неполадки.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE43VcF
 practiceTestUrl: https://www.mindhub.com/p/MU-MS-700?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -27,10 +27,11 @@ locales:
 levels:
 - intermediate
 skills:
-- В представленном ниже руководстве по экзамену отражены изменения, которые вступят в силу 26 июля 2021 года.
-- Планирование и настройка среды для Microsoft Teams (45-50%)
-- Управление чатом, звонками и встречами (30-35%)
-- Управление политиками команд и приложений (20-25%)
+- Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Осуществление планирования и настройки среды Microsoft Teams (35-40%)
+- Управление чатами, командами, каналами и приложениями (25-30%)
+- Управление звонками и собраниями (15-20%)
+- Осуществление мониторинга среды Microsoft Teams и устранение соответствующих неполадок (10-15%)
 roles:
 - administrator
 products:
