--- a/learn-certs-pr/exams/sc-300.yml
+++ b/learn-certs-pr/exams/sc-300.yml
@@ -20,7 +20,7 @@ locales:
 - zh-cn
 - ko
 levels:
-- advanced
+- intermediate
 skills:
 - Реализация решения по управлению удостоверениями (25-30%)
 - Реализация решения по управлению проверкой подлинности и доступом (25-30%)
