--- a/learn-certs-pr/exams/sc-900.yml
+++ b/learn-certs-pr/exams/sc-900.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.sc-900
 displayName: SC-900
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
 
   Этот экзамен предназначен для тех, кто хочет ознакомиться с основами безопасности, соответствия требованиям и удостоверений (SCI) в службах cloud и связанных службах Microsoft.
 
@@ -28,19 +28,22 @@ locales:
 - ja
 - zh-cn
 - ko
-- nl
 - fr
 - es
 - pt-br
 - ru
 - ar-sa
+- id-id
+- de
+- zh-tw
+- it
 levels:
 - beginner
 skills:
-- Содержание этого экзамена будет обновлено 26 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
-- Описание понятий безопасности, соответствия требованиям и удостоверений (5-10%)
-- Описание возможностей решений Microsoft по управлению удостоверениями и доступом (25-30%)
-- Описание возможностей решений безопасности Microsoft (30-35%)
+- Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Описание понятий безопасности, соответствия требованиям и удостоверений (10-15%)
+- Описание возможностей решений Microsoft по управлению удостоверениями и доступом (30-35%)
+- Описание возможностей решений безопасности Microsoft (35-40%)
 - Описание возможностей решений Microsoft по обеспечению соответствия требованиям (25-30%)
 roles:
 - business-user
