--- a/learn-certs-pr/identity-and-access-administrator/index.yml
+++ b/learn-certs-pr/identity-and-access-administrator/index.yml
@@ -11,7 +11,7 @@ summary: |-
   Администратор удостоверений и доступа может работать как самостоятельно, так и в составе команды. Сотрудник с этой ролью сотрудничает с другими сотрудниками организации для осуществления стратегических проектов по удостоверениям в целях модернизации решений по удостоверениям, реализации решений гибридных удостоверений и реализации управления удостоверениями.
 subTitle: Администратор удостоверений и доступа Microsoft разрабатывает и реализовывает системы управления удостоверениями и доступом организации, а также управляет ими с помощью Azure AD. Администратор удостоверений и доступа Microsoft управляет такими задачами, как обеспечение безопасной проверки подлинности и авторизации доступа к приложениям предприятия.
 levels:
-- advanced
+- intermediate
 skills:
 - Реализация решения по управлению удостоверениями 
 - Реализация решения по управлению проверкой подлинности и доступом
