--- a/learn-certs-pr/m365-teams-administrator-associate/index.yml
+++ b/learn-certs-pr/m365-teams-administrator-associate/index.yml
@@ -2,20 +2,22 @@
 title: 'Microsoft 365 Certified: Teams Administrator Associate'
 metadata:
   title: 'Microsoft 365 Certified: Teams Administrator Associate'
-  description: Администратор Microsoft Teams настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
+  description: Кандидаты на этот экзамен являются администраторами Microsoft Teams, которые осуществляют управление Microsoft Teams с целью упрощения эффективного и действенного сотрудничества и коммуникации в среде Microsoft 365.
 uid: certification.m365-teams-administrator-associate
+certificationRenewalUid: renewal.m365-teams-administrator-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
-  Администратор Microsoft Teams настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
-
-  Администратор Microsoft Teams должен быть способным планировать, развертывать и управлять командами в чате, приложениях, каналах, на собраниях, аудиоконференциях, интерактивных мероприятиях и вызовах.
-subTitle: Администратор Microsoft Teams настраивает, развертывает и управляет рабочими нагрузками Office 365 для Microsoft Teams, которые нацелены на эффективное и результативное сотрудничество и взаимодействие в корпоративной среде.
+  Кандидаты на этот экзамен являются администраторами Microsoft Teams, которые осуществляют управление Microsoft Teams с целью упрощения эффективного и действенного сотрудничества и коммуникации в среде Microsoft 365.
+  
+  Кандидаты на этот экзамен должны мочь осуществлять планирование, развертывание, настройку и обеспечение безопасности чатов, приложений, каналов, собраний, аудио- и видеоконференций, трансляций, звонков Teams и устройств, сертифицированных для Microsoft Teams.
+subTitle: Кандидаты на этот экзамен являются администраторами Microsoft Teams, которые осуществляют управление Microsoft Teams с целью упрощения эффективного и действенного сотрудничества и коммуникации в среде Microsoft 365.
 levels:
 - intermediate
 skills:
-- Планирование и настройка среды для Microsoft Teams
-- Управление чатом, звонками и встречами
-- Управление политиками команд и приложений
+- Осуществлять планирование и настройку среды Microsoft Teams 
+- Управлять чатами, командами, каналами и приложениями 
+- Управлять звонками и собраниями 
+- Осуществлять мониторинг среды Microsoft Teams и устранять соответствующие неполадки 
 roles:
 - administrator
 type: role-based
