--- a/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
+++ b/learn-certs-pr/security-compliance-and-identity-fundamentals/index.yml
@@ -6,6 +6,8 @@ metadata:
 uid: certification.security-compliance-and-identity-fundamentals
 iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badge.svg
 summary: |-
+  <div><font color="red"><strong>Содержание этой сертификации было обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков на странице(-ах) соответствующего(-их) экзамена(-ов), чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
+  
   Эта сертификация предназначена для тех, кто хочет ознакомиться с основами безопасности, соответствия требованиям и удостоверений (SCI) в службах cloud и связанных службах Microsoft.
 
   Это широкая аудитория, которая может включать заинтересованных лиц компаний, начинающих и опытных IT-специалистов и учащихся, которых интересуют решения Microsoft в отношении безопасности, обеспечения соответствия требованиям и удостоверений.
