--- a/learn-certs-pr/exams/dp-203.yml
+++ b/learn-certs-pr/exams/dp-203.yml
@@ -6,10 +6,13 @@ metadata:
 uid: exam.dp-203
 displayName: DP-203
 summary: |-
-  Инженеры данных Azure интегрируют, преобразовывают и консолидируют данные из различных систем структурированных и неструктурированных данных в структуры, подходящие для создания решений для аналитики.
+  Кандидаты на этот экзамен должны обладать знаниями по интеграции, преобразованию и консолидации данных из различных систем структурированных и неструктурированных данных в структуру, подходящую для создания решений для аналитики.
   
-  Кандидаты на экзамен DP-203&#58; Data Engineering on Microsoft Azure должны хорошо знать языки обработки данных, такие как SQL, Python или Scala, и понимать параллельную обработку и шаблоны архитектуры данных.
+  Azure Data Engineers помогают заинтересованным лицам понимать данные посредством исследования, создают и поддерживают безопасные и соответствующие требованиям конвейеры обработки данных с использованием различных инструментов и техник. Эти специалисты используют различные Azure data services и языки для хранения и создания очищенных и дополнительных наборов данных для анализа.
   
+  Azure Data Engineers также помогают обеспечивать хорошую работу, эффективность, структурированность и надежность конвейеров и хранилищ данных и их соответствие набору требований и ограничений бизнеса. Эти специалисты быстро устраняют непредвиденные проблемы и минимизируют потерю данных. Эти специалисты также разрабатывают, реализовывают, контролируют и оптимизируют платформы данных для соответствия требованиям конвейеров данных.
+  
+  Кандидат на этот экзамен должен хорошо знать языки обработки данных, такие как SQL, Python или Scala, и понимать параллельную обработку и шаблоны архитектуры данных.
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: проектировать и реализовывать хранение данных; проектировать и разрабатывать обработку данных; проектировать и реализовывать безопасность данных; отслеживать и оптимизировать хранение и обработку данных.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MbYT
