--- a/learn-certs-pr/exams/mb-210.yml
+++ b/learn-certs-pr/exams/mb-210.yml
@@ -6,13 +6,13 @@ metadata:
 uid: exam.mb-210
 displayName: MB-210
 summary: |-
-  <div><font color="red"><strong>Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
   
-  Кандидатами на этот экзамен являются Функциональные консультанты Dynamics 365 с опытом продаж. Кандидаты несут ответственность за внедрение решений, поддерживающих жизненный цикл продаж для эффективного и действенного выполнения задач по достижению доходов, бизнес-стратегий и целей компании.
+  Кандидаты на этот экзамен являются консультантами по функциональным возможностям Microsoft Dynamics 365 со знанием продаж. Кандидаты отвечают за реализацию решений, которые поддерживают жизненный цикл продаж для эффективного и действенного выполнения задач по достижению целевых значений выручки и целей компании и осуществлению бизнес-стратегий.
   
-  Кандидаты отвечают за настройку и расширение основных функций потенциальных клиентов, контактов, учетных записей, возможностей и вспомогательных организаций для сопоставления с процессами продаж, происходящими в компании. Они выявляют возможности использования Power Apps для разработки унифицированных интерфейсов для всех устройств, Power Automate для интеграции приложений, потоков бизнес-процессов и других инструментов автоматизации для создания приложения, которое поддерживает и ускоряет потенциального клиента к расходованию денежных средств».
-  
-  Кандидаты должны обладать глубокими деловыми знаниями и, желательно, опытом от первого лица в мире продаж в одной или нескольких ролях продаж.
+  Кандидаты отвечают за настройку и расширение основных функций потенциальных клиентов, контактов, учетных записей, возможностей и вспомогательных организаций для сопоставления с процессами продаж, происходящими в компании. Кандидаты определяют возможности использования Power Apps для разработки унифицированных интерфейсов для всех устройств, Power Automate для интеграции приложений, потоков бизнес-процессов и других инструментов автоматизации для создания приложения, которое поддерживает и ускоряет путь от выявления интереса до получения оплаты.
+
+  Кандидаты должны обладать глубокими деловыми знаниями и, желательно, опытом в одной или нескольких ролях продаж.
 subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: выполнять настройку, управлять основными таблицами по продажам, настраивать дополнительные инструменты и службы.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VUjN
@@ -20,10 +20,11 @@ practiceTestUrl: https://www.mindhub.com/mb-210-microsoft-dynamics-365-sales-mic
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-210&examname=Exam%20MB-210:%20Microsoft%20Dynamics%20365%20for%20Sales&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-210
 locales:
 - en
+- ja
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Выполнение настроек (25-30%)
 - Управление основными торговыми предприятиями (50-55%)
 - Настройка дополнительных инструментов и сервисов (15-20%)
