--- a/learn-certs-pr/exams/mb-330.yml
+++ b/learn-certs-pr/exams/mb-330.yml
@@ -6,30 +6,31 @@ metadata:
 uid: exam.mb-330
 displayName: MB-330
 summary: |-
-  <div><font color='red'><strong>Содержание этого экзамена будет обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
 
   Кандидаты на этот экзамен анализируют бизнес-требования и создают на основе этих требований полностью осуществляемые бизнес-процессы и решения, которые реализуют лучшие в области практики. Кандидаты служат в качестве основного ресурса во время реализации и настройки приложений для выполнения бизнес-требований.
   <br/>
 
-  Кандидаты на этот экзамен обладают фундаментальным пониманием учетных политик и финансовых операций бизнесов, понятий обслуживания клиентов, выездного обслуживания, производства, розничной торговли и управления логистическими цепочками. Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций приложений Finance and Operations, включая финансы, производство и управление логистическими цепочками.
+  Кандидаты на этот экзамен обладают фундаментальным пониманием учетных политик и финансовых операций бизнесов, понятий обслуживания клиентов, выездного обслуживания, производства, розничной торговли и управления логистическими цепочками. Кандидаты на этот экзамен обычно специализируются на одном или нескольких наборах функций приложений для финансов и операций, включая финансы, производство и управление логистическими цепочками.
 
   Кандидаты должны иметь некоторые знания о практике управления цепочками поставок, включая закупки, торговлю, логистику, управление складами и управление перевозками.
-subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: реализовывать управление информацией о продуктах; реализовывать управление запасами; реализовывать процессы логистических цепочек и управлять ими; реализовывать управление складом и транспортировкой; реализовывать сводное планирование.'
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: реализовывать управление информацией о продуктах; реализовывать управление запасами; реализовывать процессы логистических цепочек и управлять ими; реализовывать управление складом и транспортировкой; реализовывать оптимизацию планирования.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVt
 practiceTestUrl: https://in.mindhub.com/mb-330-microsoft-dynamics-365-supply-chain-microsoft-official-practice-test/p/MU-MB-330?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice  
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=MB-330&examname=Exam%20MB-330:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Supply%20Chain%20Management&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-330
 locales:
 - en
+- ja
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 26 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
-- Внедрение управления информацией о продукте (20-25%)
-- Внедрение управления запасами (15-20%)
-- Внедрение и управление процессами цепочки поставок (15-20%)
-- Внедрение управления складом и транспортировкой (20-25%)
-- Реализация сводного планирования (15-20%)
+- Содержание этого экзамена было обновлено 26 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Внедрение управления информацией о продукте (25-30 %)
+- Реализовывать управление запасами (15-20 %)
+- Реализовывать процессы логистических цепочек и управлять ими (15-20 %)
+- Реализовывать управление складом и управление транспортировкой (20-25 %)
+- Реализовывать оптимизацию планирования (15-20 %)
 roles:
 - functional-consultant
 products:
