--- a/learn-certs-pr/exams/pl-100.yml
+++ b/learn-certs-pr/exams/pl-100.yml
@@ -6,16 +6,12 @@ metadata:
 uid: exam.pl-100
 displayName: PL-100
 summary: |-
-  <div><font color="red"><strong>Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
 
-  Конструктор приложений App Maker создает решения для упрощения, автоматизации и преобразования задач и процессов для себя и своей команды, обладая глубокими знаниями в области бизнес-решений. Кандидаты должны разбираться в ключевых задачах технического бизнес-аналитика, таких как моделирование данных, базовый дизайн UX, анализ требований, анализ процессов и т. д.<br/><br/>
+  Кандидат определяет и создает решения для упрощения и автоматизации задач и процессов для себя и своей команды. Кандидат понимает данные, с которыми работает; проблемы, которые нужно решить; требуемые процессы и возможности приложений. У кандидата может не быть формального IT-образования, но ему комфортно использовать технологии для решения бизнес-проблем.
   
-  Конструктор приложений App Maker создает и поддерживает бизнес-процессы, структурирует цифровой сбор информации, повышает эффективность повторяемых задач и автоматизирует бизнес-процессы.
-  
-  Конструктор приложений App Maker использует инструменты конструктора Power Platform для решения бизнес-задач. Они могут иметь опыт работы с Visual Basic для приложений, сводными таблицами Excel, командами и другими инструментами. Они должны иметь базовое понимание моделей данных, пользовательского интерфейса и процессов. App Maker знают о возможностях и ограничениях доступных инструментов и понимают, как их применять.
-  
-  App Maker является самостоятельным и ориентированным на решение. Возможно они не проходили формальное обучение по ИТ, но им удобно использовать технологии для решения бизнес-задач и они настроены на личностный рост. Они понимают оперативную потребность и видят желаемый результат. Они подходят к проблемам с использованием поэтапных и итеративных стратегий.
-subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: проектировать решения, создавать решения, анализировать данные, реализовывать решения и управлять ими.'
+  Кандидат работает самостоятельно, ориентирован на решение проблем. Кандидат может подключаться к функциям приложений и использовать их, включая приложения и службы Microsoft Teams, Microsoft 365 и сторонние решения. У кандидата есть желание понять возможности и ограничения доступных инструментов и то, как их использовать. Кандидат является сторонником решений Power Platform.
+subTitle: 'Этот экзамен измеряет вашу способность выполнять следующие технические задачи: проектировать бизнес-решения; создавать решения; анализировать и визуализировать данные.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4wo07
 practiceTestUrl: https://www.mindhub.com/p/MU-PL-100?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
@@ -26,14 +22,14 @@ providers:
   examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=PL-100&provider=psi&examname=Exam%20PL-100:%20Microsoft%20Power%20Platform%20App%20Maker&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fpl-100
 locales:
 - en
+- ja
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
-- Проектирование решений (10-15%)
-- Создание решений (50-55%)
-- Анализ данных (5-10%)
-- Реализация решений и управление ими (15-20%)
+- Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
+- Проектирование бизнес-решений (35-40%)
+- Создание решений (45-50%)
+- Анализ и визуализация данных (15-20%)
 roles:
 - business-analyst
 - business-owner
@@ -93,7 +89,7 @@ relatedCertifications:
 resources:
 - title: Обучение для получения сертификата
   description: Рекомендуемые учебные ресурсы, которые помогут вам подготовиться к обязательным экзаменам и получить сертификат.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CfjG
+  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4CkBF
 - title: Руководство по образовательным курсам и сертификациям
   description: Изучите все сертификаты в кратком руководстве по обучению и сертификации.
   href: https://aka.ms/TrainingCertDeck
