--- a/learn-certs-pr/exams/sc-200.yml
+++ b/learn-certs-pr/exams/sc-200.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.sc-200
 displayName: SC-200
 summary: |-
-  <div><font color="red"><strong>Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
 
   Аналитик операций безопасности Microsoft сотрудничает с заинтересованными лицами организации в целях защиты систем информационных технологий организации. Цель аналитиков операций безопасности — снижение рисков организации путем быстрого устранения активных атак в среде, предоставления рекомендаций по улучшению практик защиты от угроз и информирования соответствующих заинтересованных лиц о нарушениях политик организации.
 
@@ -21,10 +21,18 @@ locales:
 - ja
 - zh-cn
 - ko
+- fr
+- de
+- es
+- pt-br
+- ru
+- ar-sa
+- zh-tw
+- it
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Устранение угроз с помощью Microsoft 365 Defender (25-30%)
 - Устранение угроз с помощью Azure Defender (25-30%)
 - Устранение угроз с помощью Azure Sentinel (40-45%)
