--- a/learn-certs-pr/exams/sc-400.yml
+++ b/learn-certs-pr/exams/sc-400.yml
@@ -6,7 +6,7 @@ metadata:
 uid: exam.sc-400
 displayName: SC-400
 summary: |-
-  <div><font color="red"><strong>Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменится.</strong></font><br/><br/></div>
+  <div><font color="red"><strong>Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong></font><br/><br/></div>
 
   Администратор защиты информации планирует и реализовывает элементы управления, обеспечивающие соответствие требованиям организации. Этот специалист отвечает за техническую реализацию требований и средств контроля соответствия. Администратор защиты информации помогает ответственным за контроль лицам организации достигать и поддерживать соответствие требованиям.
 
@@ -20,10 +20,13 @@ pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4Mr8
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=SC-400&examname=Exam%20SC-400:%20Microsoft%20Information%20Protection%20Administrator&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fsc-400
 locales:
 - en
+- zh-cn
+- ja
+- ko
 levels:
 - intermediate
 skills:
-- Содержание этого экзамена будет обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменится.
+- Содержание этого экзамена было обновлено 23 июля 2021 года. Пожалуйста, загрузите структуру навыков для экзамена ниже, чтобы увидеть, что изменилось.
 - Реализация защиты информации (35-40%)
 - Реализация предотвращения потери данных (30-35%)
 - Реализация управления информацией (25-30%)
