--- a/learn-certs-pr/m365-teams-support-engineer-associate/index.yml
+++ b/learn-certs-pr/m365-teams-support-engineer-associate/index.yml
@@ -2,16 +2,14 @@
 title: 'Microsoft 365 Certified: Teams Support Engineer Associate'
 metadata:
   title: 'Microsoft 365 Certified: Teams Support Engineer Associate'
-  description: Этот экзамен станет доступен 8 июля 2021 года или вскоре после этой даты. Кандидаты на этот экзамен являются инженерами службы поддержки, которые обеспечивают поддержку сред Microsoft Teams, устраняют неполадки во время развертываний, осуществляют настройку производительности, сбор и анализ данных телеметрии и журналов и управление средами Teams.
+  description: Кандидаты на этот экзамен являются инженерами службы поддержки, которые обеспечивают поддержку сред Microsoft Teams, устраняют неполадки во время развертываний, осуществляют настройку производительности, сбор и анализ данных телеметрии и журналов и управление средами Teams.
 uid: certification.m365-teams-support-engineer-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: |-
   Кандидаты на этот экзамен являются инженерами службы поддержки, которые обеспечивают поддержку сред Microsoft Teams, устраняют неполадки во время развертываний, осуществляют настройку производительности, сбор и анализ данных телеметрии и журналов и управление средами Teams.
 
   Кандидаты должны обладать значительным опытом работы с объединенными коммуникациями и практическим опытом работы с Microsoft Teams. В дополнение кандидаты должны обладать относящимися к сетям знаниями основ Azure, телефонии, PowerShell, технологий хранения данных, APIs, безопасности приложений, аутентификации и авторизации, безопасности, информации о соответствии требованиям, устранения неполадок, настройки производительности и мониторинга.
-
-  <div><br/><br/><font color='red'><strong>Примечание: схема обучения для этого экзамена станет доступна 30 июня 2021 года, а экзамен станет доступен 8 июля 2021 года.</strong></font></div>
-subTitle: Этот экзамен станет доступен 8 июля 2021 года или вскоре после этой даты. Кандидаты на этот экзамен являются инженерами службы поддержки, которые обеспечивают поддержку сред Microsoft Teams, устраняют неполадки во время развертываний, осуществляют настройку производительности, сбор и анализ данных телеметрии и журналов и управление средами Teams.
+subTitle: Кандидаты на этот экзамен являются инженерами службы поддержки, которые обеспечивают поддержку сред Microsoft Teams, устраняют неполадки во время развертываний, осуществляют настройку производительности, сбор и анализ данных телеметрии и журналов и управление средами Teams.
 levels:
 - intermediate
 skills:
